config to run in mst

--- a/TeamsApps/ReactTest/env/.env.dev
+++ b/TeamsApps/ReactTest/env/.env.dev
@@ -9,7 +9,7 @@ AZURE_RESOURCE_GROUP_NAME=
 RESOURCE_SUFFIX=
 
 # Generated during provision, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
-TEAMS_APP_ID=
+TEAMS_APP_ID= 2943bd73-13a4-477e-9b6b-95eb8bdfdfb7
 TEAMS_APP_TENANT_ID=
 AAD_APP_CLIENT_ID=
 AAD_APP_OBJECT_ID=
